@@ -61,10 +61,12 @@ function wfGzipHandler( $s ) {
 		return $s;
 	}
 	
-	$tokens = preg_split( '/[,; ]/', $_SERVER['HTTP_ACCEPT_ENCODING'] );
-	if ( in_array( 'gzip', $tokens ) ) {
-		header( 'Content-Encoding: gzip' );
-		$s = gzencode( $s, 3 );
+	if( isset( $_SERVER['HTTP_ACCEPT_ENCODING'] ) ) {
+		$tokens = preg_split( '/[,; ]/', $_SERVER['HTTP_ACCEPT_ENCODING'] );
+		if ( in_array( 'gzip', $tokens ) ) {
+			header( 'Content-Encoding: gzip' );
+			$s = gzencode( $s, 3 );
+		}
 	}
 	
 	// Set vary header if it hasn't been set already
